@@ -39,6 +39,7 @@ namespace scheme {
 Object internalFfiLookupEx(VM* theVM, int argc, const Object* argv);
 Object internalFfiOpenEx(VM* theVM, int argc, const Object* argv);
 Object internalFfiCallTointEx(VM* theVM, int argc, const Object* argv);
+Object internalFfiCallTovoidEx(VM* theVM, int argc, const Object* argv);
 
 }; // namespace scheme
 
