@@ -1,3 +1,5 @@
+#include <ctype.h>
+#include <string.h>
 int return3()
 {
   return 3;
@@ -16,4 +18,12 @@ int sub3(int a, int b, int c)
 int string_length(const char* text)
 {
     return strlen(text);
+}
+
+void my_upper(char* text, int length)
+{
+    int i;
+    for (i = 0; i < length; i++) {
+        text[i] = toupper(text[i]);
+    }
 }
